--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	
 	<body class="body">
 		<!-- 背景图片 -->
-		<div style="background:url(http://api.dujin.org/bing/1920.php) no-repeat 0 center;width:100%;height:100%;position:fixed;z-index:-1;"></div>
+		<div style="background:url(res/public/background.jpg) no-repeat 0 center;width:100%;height:100%;position:fixed;z-index:-1;"></div>
 		<!-- 主题内容 -->
 		<div class="content">
 			<div class="contentHeader" style="">
@@ -28,8 +28,61 @@
 					<a href="info.html" class="contentHeaderTab">系统信息</a>
 				</div>
 				<!-- 内容界面 -->
-				<div class="contentBlock" style="height:1280px;">
-					我是首页，我不知道要放什么东西...
+				<div class="contentBlock" style="padding-bottom:36px;">
+					<div style="width:1200px;text-align:left;padding:32px;"><font size="5">首页</font></div>
+					<!-- 首页内容 -->
+					<div style="width:1200px;float:left;margin-bottom:36px;">
+						<div style="float:left;">
+						<table style="left:0px;width:536px;margin-left:36px" border="1">
+							<tr style="height:46px;background-color:#ddd;">
+								<td width="400px">区域名称</td>
+								<td>区域状态</td>
+							</tr>
+							<tr style="height:46px;">
+								<td>客厅</td>
+								<td>×</td>
+							</tr>
+							<tr style="height:46px;">
+								<td>过道</td>
+								<td>√</td>
+							</tr>
+							<tr style="height:46px;">
+								<td>卧室</td>
+								<td>未连接</td>
+							</tr>
+						</table>
+						</div>
+						<div style="float:right;">
+						<table style="width:536px;margin-right:36px;" border="1">
+							<tr style="height:46px;background-color:#ddd;">
+								<td width="400px">设备名称</td>
+								<td >设备状态</td>
+							</tr>
+							<tr style="height:46px;">
+								<td width="400px">主控制器</td>
+								<td >√</td>
+							</tr>
+							<tr style="height:46px;">
+								<td width="400px">光线感应</td>
+								<td >√</td>
+							</tr>
+							<tr style="height:46px;">
+								<td width="400px">客厅大灯</td>
+								<td >√</td>
+							</tr>
+							<tr style="height:46px;">
+								<td width="400px">书房大灯</td>
+								<td >×</td>
+							</tr>
+							<tr style="height:46px;">
+								<td width="400px">网络大灯</td>
+								<td >未连接</td>
+							</tr>
+						</table>
+						</div>
+					</div>
+					<!-- 底部文字 -->
+					<div style="1200px;"><font size="2">智能灯光管理系统</font></div>
 				</div>
 			</div>
 		</div>
