--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
 				position:absolute;
 				margin-left:-225px;
 				margin-top:-250px;
-				box-shadow:0 0 38px #999;
+				box-shadow:0 0 38px black;
 			}
 			.formIcon{
 				position:absolute;
@@ -55,7 +55,7 @@
 	
 	<body class="body">
 		<!-- 背景图片 -->
-		<div style="background:url(http://api.dujin.org/bing/1920.php) no-repeat 0 center;width:100%;height:100%;"></div>
+		<div style="background:url(res/public/background.jpg) no-repeat 0 center;width:100%;height:100%;"></div>
 		<!-- 主要内容 -->
 		<div class="loginDialog">
 			<img src="res/login/card_background.png" style="width:450px;height:200px;"></i>
@@ -71,7 +71,7 @@
 				</form>
 			</div>
 			<a href="https://www.baidu.com" style="float:right;margin-right:20px;"><font size="2">忘记密码?</font></a>
-			<button class="formButton">立即登陆</button>
+			<button class="formButton" onclick="location.href='index.html'">立即登陆</button>
 		</div>
 		
 	</body>
