--- a/info.html
+++ b/info.html
@@ -11,7 +11,7 @@
 	
 	<body class="body">
 		<!-- 背景图片 -->
-		<div style="background:url(http://api.dujin.org/bing/1920.php) no-repeat 0 center;width:100%;height:100%;position:fixed;z-index:-1;"></div>
+		<div style="background:url(res/public/background.jpg) no-repeat 0 center;width:100%;height:100%;position:fixed;z-index:-1;"></div>
 		<!-- 主题内容 -->
 		<div class="content">
 			<div class="contentHeader" style="">
@@ -28,8 +28,21 @@
 					<a href="info.html" class="contentHeaderTab">系统信息</a>
 				</div>
 				<!-- 内容界面 -->
-				<div class="contentBlock" style="height:1280px;">
-					我是首页，我不知道要放什么东西...
+				<div class="contentBlock" style="padding-bottom:36px;">
+					<!-- 副标题 -->
+					<div style="width:1200px;text-align:left;padding:32px;"><font size="5">系统信息</font></div>
+					<!-- 内容 -->
+					<div style="width:1200px;text-align:left;padding:32px;">
+						<font size="3">硬件版本 : S3C2491</font>
+					</div>
+					<div style="width:1200px;text-align:left;padding-left:32px;margin-top:-10px;">
+						<font size="3">软件版本 : SL2000.01.12</font>
+					</div>
+					<div style="width:1200px;text-align:left;padding-left:32px;margin-top:16px;">
+						<a href="https://github.com/CreeperSan/Light-Manage-System-Web"><font size="3">点我查看Web源代码</font></g>
+					</div>
+					<!-- 底部文字 -->
+					<div style="1200px;margin-top:36px;"><font size="2">智能灯光管理系统 - 设备管理</font></div>
 				</div>
 			</div>
 		</div>
